# wasm-face-detection

./: CMakeLists.txt  README.md  package-lock.json
src/: index.ts  main.cpp
